@@ -1,0 +1,22 @@
+{
+	"id": "f78cf715-5006-4434-b268-62cd8719e8d1",
+	"name": "AGHydra",
+	"values": [
+		{
+			"key": "ENDPOINT",
+			"value": "http://localhost:5000",
+			"description": "",
+			"enabled": true
+		},
+		{
+			"key": "BEARER",
+			"value": "Bearer eyJhbGciOiJIUzUxMiJ9.eyJzdWIiOiIxMDU0MTUxMjk2MjQ0NDQyOTYxMDEiLCJleHAiOjEwOTQ3OTUwMzU1Mjh9.YSmkD-DA5V-b2dvzwG0S026mqupucOUt6QEWthIXS2-WytJPMBsT35PPwynA3QUh2uFB4pJn2PSENPfZgQSt1g",
+			"type": "text",
+			"description": "",
+			"enabled": true
+		}
+	],
+	"_postman_variable_scope": "environment",
+	"_postman_exported_at": "2018-11-22T21:29:02.218Z",
+	"_postman_exported_using": "Postman/6.5.2"
+}
