@@ -1,3 +1,4 @@
+ - #6 add initial postman collection and environment
  - #4 create project installation guide
  - #36 impl for service : POST register/company/add
  - #38 serialize value objects to JSON as values
